test/fails/bad_generics/basics3.lgl
`t id<`t>(`t x) {
    return x;
}

void main() {
    bool fail = id<bool>(id<int>(3));  // Use return and pass type correctly
}